#1531 Helium MS. Fase 1 - Integrar aplicació Helium amb Helium-jbpm